# nebius-serverless-tuner

./: .env.example  .gitignore  AGENTS.md  BLOG.md  Dockerfile  LICENSE  README.md  job-entrypoint.sh  pyproject.toml
docs/: LIVE-RUNBOOK.md
docs/superpowers/plans/: 2026-06-16-serverless-tuner.md
docs/superpowers/specs/: 2026-06-16-serverless-tuner-design.md
examples/: sample-report.md
proof/: live-attempt-2026-06-16.md
src/tuner/: adapters.py  agent.py  bench.py  cli.py  config.py  deploy.py  loop.py  pricing.py  report.py
tests/: test_agent.py  test_bench.py  test_cli.py  test_config.py  test_deploy.py  test_loop.py  test_pricing.py  test_ready.py  test_report.py
